--- a/ModelProject/Components/Account/Pages/Login.razor
+++ b/ModelProject/Components/Account/Pages/Login.razor
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<User> SignInManager
+@inject SignInManager<Users> SignInManager
 @inject ILogger<Login> Logger
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
