--- a/ModelProject/Components/Account/Pages/Register.razor
+++ b/ModelProject/Components/Account/Pages/Register.razor
@@ -25,6 +25,10 @@
         <EditForm OnValidSubmit="RegisterUser" Model="Model" FormName="registerForm">
             <div class="row g-3">
                 <div class="col-md-12">
+                    <label for="username" class="form-label">Username</label>
+                    <InputText class="form-control" placeholder="Username" @bind-Value="Model.Username" />
+                </div>
+                <div class="col-md-12">
                     <label for="email" class="form-label">Email</label>
                     <InputText class="form-control" placeholder="Email" @bind-Value="Model.Email" />
                 </div>
@@ -58,12 +62,16 @@
 
     public async Task RegisterUser(EditContext editContext)
     {
-        var user = Activator.CreateInstance<User>(); ;
-        await UserStore.SetUserNameAsync(user, Model.Email, CancellationToken.None);
-        var emailStore = (IUserEmailStore<User>)UserStore;
-        await emailStore.SetEmailAsync(user, Model.Email, CancellationToken.None);
+        //Creating the user
+        var user = new User
+            {
+                UserName = Model.Email,
+                Email = Model.Email,
+            };
+        //Adding that user to the database
         var result = await UserManager.CreateAsync(user, Model.Password);
 
+        //Error Message
         if (!result.Succeeded)
         {
             identityErrors = result.Errors;
@@ -81,6 +89,8 @@
 
     private sealed class RegisterModel
     {
+        public string Username { get; set; } = "";
+
         public string Email { get; set; } = "";
 
         public string Password { get; set; } = "";
