--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>AP Models</PageTitle>
 
-<h1>Hello, world! This is a test</h1>
+<h1>Hello, world!</h1>
 
