--- a/ModelProject/Components/Layout/MainLayout.razor
+++ b/ModelProject/Components/Layout/MainLayout.razor
@@ -12,6 +12,17 @@
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">Home</NavLink>
                 </li>
+                
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/Upload" Match="NavLinkMatch.All">Upload</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/Profile" Match="NavLinkMatch.All">Profile</NavLink>
+                </li>
+                <li class="nav-item">
+                    <NavLink class="nav-link" href="/Dashboard" Match="NavLinkMatch.All">Dashboard</NavLink>
+                </li>
+
             </ul>
             <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
                 <AuthorizeView>
