made changes to upload.razor

--- a/ModelProject/Components/Account/Pages/Register.razor
+++ b/ModelProject/Components/Account/Pages/Register.razor
@@ -65,7 +65,7 @@
         //Creating the user
         var user = new User
             {
-                UserName = Model.Email,
+                UserName = Model.Username,
                 Email = Model.Email,
             };
         //Adding that user to the database
