--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -33,18 +33,33 @@
 </div>
 
 <div class="dropdown"> 
-    <button class="btn btn-secandary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Catagory 
+    <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Category 
     </button>
-    <ul class="="dropdown-menu"> 
+    <ul class="dropdown-menu"> 
         <li><a class="dropdown-item" href="#">Vehicles</a></li>
         <li><a class="dropdown-item" href="#">Sci-Fi</a></li>
         <li><a class="dropdown-item" href="#">Animal</a></li>
         <li><a class="dropdown-item" href="#">Horror</a></li>
-        <li><a class="dropdown-item" href="#">Vidogame</a></li>
-        <li><a class="dropdown-item" href="#"></a></li>
+        <li><a class="dropdown-item" href="#">Videogame</a></li>
+        <li><a class="dropdown-item" href="#">Character</a></li>
     </ul>
 </div>
+
+<div class="btn-group">
+   <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        File Format 
+    </button>
+    <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">obj</a></li>
+        <li><a class="dropdown-item" href="#">fbx</a></li>
+        <li><a class="dropdown-item" href="#">stl</a></li>
+        <li><a class="dropdown-item" href="#">gltf</a></li>
+        <li><a class="dropdown-item" href="#">glb</a></li>
+    </ul>
+</div>
+
+
 
 @code 
 {
