--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -3,18 +3,31 @@
 
 <PageTitle>AP Models</PageTitle>
 
+
 @if (models == null || !models.Any())
 {
     <p>No models uploaded yet.</p>
 }
 else
 {
-    <ul>
-        @foreach (var model in models)
-        {
-            <li>@model.Title - @model.Category</li>
-        }
-    </ul>
+    //the format of the model on the hompage 
+   <div class="container">
+       <div class="row">
+           @foreach(var model in models)
+            {
+             <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+                 <div class="card">
+                     <img src="defult-thumbnail.png" class="card-img-top" alt="@model.Title Thumbnail" />
+                     <div class="card-body">
+                         <h5 class="card-title">@model.Title</h5>
+                         <p class="card-text">@model.Category</p>
+                         <a href="@($"/model/{model.Id}")" class="btn btn-primary">View Details</a>
+                     </div>
+                 </div>
+             </div>
+             }
+        </div>
+   </div>
 }
 
 @code
